# triematch

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  setup.sh
retrie/: __init__.py  ahocorasick.py  perf.py  radix.py  trie.py
tests/: README.md  actrie_test.py  conftest.py  dict_like_test.py  radix_test.py  trie_like_test.py  trie_test.py
tests/test_utils/: __init__.py  data_in_test.py
triematch/: __init__.py  radix.py  trie.py  utils.py
